# functools-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: cache_macro.rs
